--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -8,15 +8,9 @@
   </div>
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <h1>Log in</h1>
+      <h1>Reset Password</h1>
       <hr>
       {{ wtf.quick_form(form, button_map={'submit': 'secondary'}) }}
-      <hr>
-      <p>Forget Password?
-        <a href="{{ url_for('auth.reset_password_request') }}">
-          Find your password now.
-        </a>
-      </p>
     </div>
   </div>
 {% endblock %}
