added the strength checker on the register password filed

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -15,3 +15,6 @@
     </div>
   </div>
 {% endblock %}
+{% block ps %}
+<script src="{{ url_for('static', filename='js/register_ps_check.js') }}"></script>
+{% endblock %}
