--- a/app/templates/navbar/navbar.html
+++ b/app/templates/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #274e68;">
+<nav class="navbar navbar-expand-sm navbar-dark">
   <div class="container">
     <a class="navbar-brand" href="{{ url_for('auth.login') }}">Website</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav">
