added the scss compiler to the project

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -16,5 +16,8 @@
   </div>
 {% endblock %}
 {% block ps %}
-<script src="{{ url_for('static', filename='js/register_ps_check.js') }}"></script>
+  {% assets "js_all" %}
+      <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+  {% endassets %}
+<!--<script src="{{ url_for('static', filename='js/register_ps_check.js') }}"></script>-->
 {% endblock %}
