--- a/app/templates/bootstrap/bs5_base.html
+++ b/app/templates/bootstrap/bs5_base.html
@@ -14,8 +14,10 @@
     <!-- Bootstrap -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <!-- My Style -->
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/password.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/password.min.css') }}" rel="stylesheet">
+    {% assets "scss_all" %}
+      <link rel=stylesheet type=text/css href="{{ ASSET_URL }}">
+    {% endassets %}
     {%- endblock styles %}
     {%- endblock head %}
   </head>
@@ -29,7 +31,7 @@
     {% block scripts %}
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/password.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/password.min.js') }}"></script>
     {% block page_script -%}
     {%- endblock page_script %}
     {%- endblock scripts %}
