added the passwd min/max check

--- a/app/static/custom_css/style.scss
+++ b/app/static/custom_css/style.scss
@@ -3,3 +3,6 @@ $navbar-background-color: #274e68;
 .navbar-dark{
     background-color: $navbar-background-color;
 }
+.psswd-vars{
+    display: none;
+}
