--- a/app/templates/bootstrap/bs5_base.html
+++ b/app/templates/bootstrap/bs5_base.html
@@ -31,7 +31,7 @@
     {% block scripts %}
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/password.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/password.js') }}"></script>
     {% block page_script -%}
     {%- endblock page_script %}
     {%- endblock scripts %}
