--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -9,6 +9,8 @@
   </div>
   <div class="row justify-content-center">
     <div class="col-md-6">
+      <div class="psswd-vars" id="psswd_min_len">{{min}}</div>
+      <div class="psswd-vars" id="psswd_max_len">{{max}}</div>
       <h1>Register New User</h1>
       <hr>
       {{ wtf.quick_form(form, button_map={'submit': 'secondary'}) }}
@@ -16,8 +18,5 @@
   </div>
 {% endblock %}
 {% block ps %}
-  {% assets "js_all" %}
-      <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-  {% endassets %}
-<!--<script src="{{ url_for('static', filename='js/register_ps_check.js') }}"></script>-->
+  <script src="{{ url_for('static', filename='js/register_ps_check.js') }}"></script>
 {% endblock %}
