--- a/app/templates/navbar/navbar.html
+++ b/app/templates/navbar/navbar.html
@@ -6,8 +6,8 @@
     </button>
     <div class="collapse navbar-collapse" id="nav">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item {% if request.path == url_for('auth.login') %}active{% endif %}">
-          <a class="nav-link" href="{{ url_for('auth.login') }}">Home</a>
+        <li class="nav-item {% if request.path == url_for('main.index') %}active{% endif %}">
+          <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
